# Restaurent-management

./: .gitignore  Dockerfile  README.md  RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py
data/: menu_items.csv  real_menu_items.csv  real_sales_data.csv  sales_data.csv
models/: best_model.pkl  multistep_model.pkl  multistep_model_real.pkl  quantile_model.pkl  quantile_model_real.pkl
reports/: generate_report.py
src/: data_generation.py  datasets.py  features.py  multistep.py  predict.py  prepare_real_data.py  quantile_model.py  train.py  waste_optimizer.py
tests/: test_core.py
