[project]
name = "smart-restaurant-demand"
version = "1.0.0"
description = "Forecast daily restaurant menu demand and cut food waste with ML."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear.
select = ["E", "W", "F", "I", "UP", "B"]
# E501 (line too long) is handled by the formatter; ignore in the linter.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
